5. Fixed russian language font letter spacing, almost created WhatIDo block

--- a/src/components/Header/Logo/Logo.module.scss
+++ b/src/components/Header/Logo/Logo.module.scss
@@ -33,6 +33,7 @@
     font-size: 20px;
     font-weight: 600;
     margin-right: 10px;
+    letter-spacing: var(--spacing-logo);
 
     span {
       font-weight: 400;
