--- a/src/components/Main/AboutMe/WhatIDo/WhatIDo.module.scss
+++ b/src/components/Main/AboutMe/WhatIDo/WhatIDo.module.scss
@@ -18,4 +18,10 @@
       @extend %heading-small-line;
     }
   }
+
+  &__items {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
