--- a/src/components/Main/AboutMe/WhatIDo/WhatIDoItem/WhatIDoItem.module.scss
+++ b/src/components/Main/AboutMe/WhatIDo/WhatIDoItem/WhatIDoItem.module.scss
@@ -1,8 +1,28 @@
 .whatIDoItem {
+  display: flex;
+  align-items: flex-start;
+
   &__imgBox {
+    display: flex;
+    align-items: flex-start;
+    margin-right: 10px;
     svg {
-      width: 30px;
-      height: 30px;
+      width: 33px;
+      height: 50px;
+      color: var(--border-color);
     }
+  }
+
+  &__title {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--h-color);
+    margin-bottom: 7px;
+  }
+
+  &__text {
+    font-size: inherit;
+    line-height: 24.5px;
+    color: var(--text-color);
   }
 }
